initial starter code

--- a/src/components/page-blocks/_header.html
+++ b/src/components/page-blocks/_header.html
@@ -1,1 +1,6 @@
-<header class="header"></header>
+<header class="header">
+    <div class="header-logo">Логотип</div>
+    <div class="header-userActions">
+        <button id="header-userActions-loginButton">Вхід</button>
+    </div>
+</header>
