--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,3 +3,21 @@
 @import '**/_*.scss';
 @import '../components/**/*.scss';
 
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    background-color: #f0f0f0;
+        &-logo{
+
+        }
+        &-userActions{
+            &-userActions{
+
+            }
+        }
+}
+
+
+
