--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -19,5 +19,35 @@
         }
 }
 
+//---------CreateVisitModal-------------
+.creadeVisitModal{
+    
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 600px;
+    min-height: 200px;
+    border: 2px solid black;
+    .modal-content{
+        padding: 20px;
+        #fieldsContainer{
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+            div{
+                display: flex;
+                flex-direction: column;
+                input{
+                    width: 75%;
+                }
+                select{
+                    width: 30%;
+                }
+            }
+        }
+    }
+}
+
 
 
