--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -49,5 +49,23 @@
     }
 }
 
-
-
+//-------VisitCard--------
+.visitCard{
+    margin: 10px auto 0;
+    padding: 5px;
+    border: 2px solid black;
+    max-width: 90%;
+    position: relative;
+    p{
+        margin: 5px;
+    }
+    button{
+        margin: 0 10px 0 0;
+    }
+    span{
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        cursor: pointer;
+    }
+}
