--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -56,6 +56,9 @@
     border: 2px solid black;
     max-width: 90%;
     position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
     p{
         margin: 5px;
     }
@@ -68,4 +71,17 @@
         right: 10px;
         cursor: pointer;
     }
+    &.buttonsContainer{
+        display: flex;
+    }
+}
+.additionalInfoContainer {
+    border: 2px solid black;
+    display: none;
+}
+.active{
+    display: block;
+}
+.hidden{
+    display: none;
 }
