--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -75,6 +75,14 @@
     &.buttonsContainer{
         display: flex;
     }
+    .deleteIcon{
+        width: auto;
+        margin: 0;
+        padding: 0;
+        position: absolute;
+        top: 10px;
+        right: 10px;
+    }
 }
 .additionalInfoContainer {
     border: 2px solid black;
