--- a/src/components/page-blocks/_header.html
+++ b/src/components/page-blocks/_header.html
@@ -2,5 +2,6 @@
     <div class="header-logo">Логотип</div>
     <div class="header-userActions">
         <button id="header-userActions-loginButton">Вхід</button>
+        <button id="header-userActions-createCard" class="header-userActions-createCard">Створити візит</button>
     </div>
 </header>
