--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,16 +9,24 @@
     align-items: center;
     padding: 10px;
     background-color: #f0f0f0;
-        &-logo{
-
-        }
-        &-userActions{
-            &-userActions{
-
-            }
-        }
+}
+.header-userActions-createCard{
+    display: none;
 }
 
+
+//-------------Login----------
+.loginModal {
+    display: block;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    z-index: 1000;
+}
 //---------CreateVisitModal-------------
 .creadeVisitModal{
     
